--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,26 @@
  *= require_tree .
  *= require_self
  */
+body {
+  margin: 0;
+}
+#map {
+    width: 100%;
+    height: 100%;
+}
+#main-section {
+    width: 100%;
+    height: 100%;
+    background: black;
+}
+div#left {
+    width: 20%;
+    height: 100vh;
+    background: red;
+    float: left;
+}
+div#right {
+    margin-left: 20%;
+    height: 100vh;
+    background: black;
+}
